# zoe-relay

./: .cursorrules  .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README-docker.md  README.md  STATUS.md  TESTING.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  env.example
crates/app-primitives/: Cargo.toml
crates/app-primitives/docs/: README.md
crates/app-primitives/docs/groups/: invitation_flow.md  overview.md
crates/app-primitives/src/: connection.rs  digital_groups_organizer.rs  file.rs  file_storage.rs  group.rs  icon.rs  identity.rs  invitation.rs  lib.rs  metadata.rs  protocol.rs  qr.rs  relay.rs
crates/app-primitives/src/digital_groups_organizer/: capabilities.rs
crates/app-primitives/src/file/: image.rs
crates/app-primitives/src/group/: app.rs  app_updates.rs  events.rs  states.rs
crates/blob-store/: Cargo.toml  README.md  test_data.txt
crates/blob-store/blob-store-data/: blobs.db
crates/blob-store/examples/: README.md  upload_download.rs
crates/blob-store/src/: client.rs  error.rs  lib.rs  main.rs  server.rs  service.rs
crates/client/: Cargo.toml
crates/client-storage/: Cargo.toml  README.md
crates/client-storage/migrations/: V1__initial_schema.sql  V2__relay_sync_tracking.sql  V3__relay_id_and_subscription_state.sql  V4__state_storage.sql  V5__add_namespace_to_state_storage.sql  V6__blob_upload_tracking.sql  V7__executor_storage.sql
crates/client-storage/src/: blob_storage_tests.rs  error.rs  lib.rs  storage.rs  tests.rs
crates/client-storage/src/sqlite/: migrations.rs  mod.rs  storage.rs
crates/client/docs/: README.md
crates/client/examples/: MLS_CHAT_README.md  README.md  blob_client.rs  chat_client.rs  echo_message_client.rs  encrypted_personal_data.rs  file_storage_example.rs  full.rs  mls_chat_client.rs  simple_bot_service.rs  test_upload.txt
crates/client/src/: challenge.rs  client.rs  error.rs  file_storage.rs  lib.rs  pqxdh.rs  relay_client.rs  rpc_transport.rs  session_manager.rs  util.rs
crates/client/src/cli/: mod.rs
crates/client/src/client/: api.rs  builder.rs  group.rs  info.rs  secret.rs
crates/client/src/frb_api/: for_std.rs  mod.rs
crates/client/src/pqxdh/: error.rs  handler.rs  message_listener.rs  session.rs  state.rs  transport.rs
crates/client/src/services/: blob_store.rs  message_broadcaster.rs  message_persistence_manager.rs  messages.rs  messages_manager.rs  mod.rs  (+1 more)
crates/client/tests/: broadcast_channel_e2e.rs  challenge_e2e.rs  challenge_integration.rs  challenge_protocol_e2e.rs  client_e2e_file_storage_tests.rs  connection_monitoring_e2e.rs  multi_relay_connection_e2e.rs  quinn_connection_error_e2e.rs  system_check_tests.rs  test_encrypted_personal_data.rs
crates/encrypted-storage/: Cargo.toml
crates/encrypted-storage/src/: lib.rs
crates/forward-compatible-enum/: Cargo.toml
crates/forward-compatible-enum/examples/: basic_usage.rs  group_role_migration.rs  migration_example.rs  simple_varint_test.rs  u32_discriminants_example.rs  varint_size_demo.rs
crates/forward-compatible-enum/src/: derive.rs  lib.rs  unknown_variant.rs
crates/forward-compatible-enum/tests/: additional_derive_tests.rs  auto_discriminant_tests.rs  compile_time_tests.rs  debug_macro.rs  integration_tests.rs  parsing_boundary_tests.rs  serde_bounds_integration.rs  serde_bounds_tests.rs  simplified_coverage_tests.rs  u32_discriminants_edge_cases.rs  u32_discriminants_test.rs
crates/message-store/: Cargo.toml  README.md
crates/message-store/src/: error.rs  lib.rs  service.rs  storage.rs
crates/message-store/tests/: integration_tests.rs
crates/relay/: CLI-USAGE.md  Cargo.toml  README.md
crates/relay-service/: ARCHITECTURE.md  Cargo.toml  README.md
crates/relay-service/examples/: README.md  relay_listen_client.rs  relay_send_client.rs  relay_server.rs
crates/relay-service/src/: config.rs  connection.rs  dynamic_auth_server.rs  error.rs  lib.rs  main.rs  storage.rs  tests.rs
crates/relay-service/tests/: e2e_full_system.rs  integration_server.rs
crates/relay/docs/: README.md
crates/relay/examples/: README.md  echo_message_client.rs  message_client.rs  relay_dual_client.rs  relay_listen_client.rs  relay_send_client.rs  relay_server.rs
crates/relay/src/: challenge.rs  client.rs  config.rs  connection.rs  dynamic_auth_server.rs  error.rs  lib.rs  main.rs  relay.rs  router.rs  server.rs  tests.rs
crates/relay/tests/: challenge_e2e.rs  challenge_integration.rs  e2e_full_system.rs  integration_server.rs  messages_service_unit_tests.rs  relay_integration_test.rs  stack_overflow_debug.rs
crates/signal-bot/: Cargo.toml  README.md  USAGE.md
crates/signal-bot/src/: lib.rs  main.rs
crates/state-machine/: Cargo.toml  README.md
crates/state-machine/examples/: basic_group_example.rs  chacha20_mnemonic_example.rs
crates/state-machine/src/: app_manager.rs  dgo_executor.rs  error.rs  events.rs  generic_executor.rs  group.rs  index.rs  integration_test.rs  join_group_test.rs  lib.rs  messages.rs  state.rs  tests.rs
crates/wa-bot/: Cargo.toml
crates/wa-bot/src/: bot.rs  bridge_event.rs  builder.rs  connectable.rs  lib.rs  main.rs  util.rs
crates/wa-bot/tests/: integration_tests.rs
crates/whatsmeow/: .gitignore  Cargo.toml  E2E-TESTING.md  README.md  TESTING.md  build.rs  go.mod  go.sum  libwhatsmeow.h  whatsapp.db  whatsmeow.go
crates/whatsmeow/.config/: nextest.toml
crates/whatsmeow/examples/: callback_test.rs  qr_test.rs  real_device_test.rs
crates/whatsmeow/src/: lib.rs
crates/wire-protocol/: Cargo.toml  README.md
crates/wire-protocol/docs/: README.md
crates/wire-protocol/src/: auth.rs  blob.rs  challenge.rs  connection_info.rs  crypto.rs  invitation.rs  keys.rs  lib.rs  message.rs  model.rs  prelude.rs  primitives.rs  protocol.rs  relay.rs  relay_identity.rs  serde.rs  services.rs  streaming.rs  version.rs  wire.rs
test/end2end/: Cargo.toml
test/end2end/src/: client_integration_tests.rs  infra.rs  lib.rs  multi_client_infra.rs  pqxdh_e2e_test.rs  pqxdh_inbox_e2e_test.rs  protocol_scenarios.rs  tarpc_echo_test.rs  tarpc_echo_test_simple.rs  tests.rs
(+153 files in other folders)
