[workspace]
resolver = "2"
members = [
    "crates/app-primitives",
    "crates/blob-store",
    "crates/client", 
    "crates/client-storage",
    "crates/encrypted-storage",
    "crates/message-store",
    "crates/relay",
    "crates/signal-bot",
    "crates/state-machine",
    "crates/wa-bot",
    "crates/whatsmeow",
    "crates/wire-protocol",
    "test/end2end",
]

[workspace.dependencies]
# Core async runtime and utilities
anyhow = "1.0"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-test = "0.4"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["use-std"] }

# RPC framework
tarpc = { version = "0.36", features = ["serde-transport", "tcp", "full"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake3 = { version = "1.5", features = ["serde"] }
rand = "0.8"

# Networking and QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Compression
brotli = "8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing utilities
tempfile = "3.0"
test-case = "3.0"
serial_test = "3.0"
pretty_assertions = "1.4"
assert_matches = "1.5"

[profile.test]
# Optimize test compilation without losing debug info
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.bench]
# Optimize benchmarks
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
