[workspace]
resolver = "2"
members = [
    "crates/app-primitives",
    "crates/blob-store",
    "crates/client", 
    "crates/client-storage",
    "crates/encrypted-storage",
    "crates/forward-compatible-enum",
    "crates/message-store",
    "crates/relay",
    "crates/signal-bot",
    "crates/state-machine",
    "crates/wa-bot",
    "crates/whatsmeow",
    "crates/wire-protocol",
    "test/end2end",
]

[workspace.dependencies]
# Core async runtime and utilities
anyhow = "1.0"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tokio-test = "0.4"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["use-std"] }

# RPC framework
tarpc = { version = "0.37", features = ["serde-transport", "tcp", "full"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
async-once-cell = "0.5.4"
async-broadcast = "0.7"

# Cryptography
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux" }
ml-kem = "0.2.1"
blake3 = { version = "1.5", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
signature = "2.2"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "serde"] }
pkcs8 = "0.10"

# Networking and QUIC
quinn = "0.11"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
extend = "1.2.0"
crc32fast = "1.4"

# Database
rusqlite = { version = "0.32" }
redis = { version = "0.32.4" }

# Compression
brotli = "8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# flutter rust bridge support
flutter_rust_bridge = { version = "=2.11.1" }

# Testing utilities
tempfile = "3.0"
test-case = "3.0"
serial_test = "3.0"
pretty_assertions = "1.4"
assert_matches = "1.5"

mockall = { version = "0.13" }

# For a discussion as to why, see: 
# https://github.com/whisperfish/libsignal-service-rs/tree/93c23cf27d27a17a803e34ea3dd6a82d268fa79e#working-around-the-issue-with-curve25519-dalek
[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[profile.test]
# Optimize test compilation without losing debug info
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.dev-fast]
# Fast development profile for worktree workflows
inherits = "dev"
opt-level = 1
debug = 1  # Reduced debug info for faster builds
incremental = true
codegen-units = 256  # More parallel compilation
# Dependencies are still optimized via .cargo/config.toml

[profile.bench]
# Optimize benchmarks
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
