[package]
name = "zoe-app-primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cryptographic types
ml-dsa = { workspace = true }

# Storage and encryption
zoe-encrypted-storage = { path = "../encrypted-storage" }
zoe-wire-protocol = { path = "../wire-protocol" }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hash types
blake3 = { workspace = true }

# Forward-compatible enum macros
forward-compatible-enum = { path = "../forward-compatible-enum" }

[dev-dependencies]
# Testing utilities
ml-dsa = { workspace = true }
rand = { workspace = true }


