[package]
name = "zoe-app-primitives"
version = "0.1.0"
edition = "2024"

[features]
whatsappbot = ["tarpc"]
signalbot = []

[dependencies]
# Cryptographic types
libcrux-ml-dsa = { workspace = true }

# Storage and encryption
zoe-encrypted-storage = { path = "../encrypted-storage" }
zoe-wire-protocol = { path = "../wire-protocol" }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hash types
blake3 = { workspace = true }

# Forward-compatible enum macros
forward-compatible-enum = { path = "../forward-compatible-enum" }

# QR code generation
qrcode = "0.14"

# RPC framework for whatsappbot feature
tarpc = { workspace = true, features = ["serde-transport"], optional = true }

[dev-dependencies]
# Testing utilities
rand = { workspace = true }
hex = { workspace = true }
postcard = { workspace = true }


