[package]
name = "zoeyr-blob-store"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zoeyr-blob-store"
path = "src/main.rs"

[dependencies]
# Iroh blob store dependencies
iroh-blobs = "0.90.0"

# HTTP server
axum = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

# HTTP client for examples
reqwest = { version = "0.11", features = ["json"] }

# File system and path handling
path-clean = "0.1"
tempfile = "3.0"

# Async runtime
futures = "0.3"
irpc = "0.5.0"

[[example]]
name = "upload_download"
path = "examples/upload_download.rs"
