[package]
name = "zoe-blob-store"
version = "0.1.0"
edition = "2024"

[dependencies]
zoe-wire-protocol = { path = "../wire-protocol" }

# Iroh blob store dependencies
iroh-blobs = "0.93.0"

# Serialization and utilities
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

# Protocol handling with Tarpc
tokio = { workspace = true }
tarpc = { workspace = true, features = ["serde-transport-json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

# File system and path handling
path-clean = "0.1"
tempfile = { workspace = true }

# Async runtime
futures = { workspace = true }
irpc = "0.5.0"

[dev-dependencies]
tokio-test = "0.4"