[package]
name = "zoe-client-storage"
version = "0.1.0"
edition = "2024"
description = "Client-side storage layer for Zoe using SQLite and encryption support"
license = "MIT OR Apache-2.0"


[dependencies]
zoe-wire-protocol = { path = "../wire-protocol" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database and migrations
rusqlite = { version = "0.32", features = ["bundled", "sqlcipher", "blob"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
hex = { workspace = true }
ml-dsa = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
serial_test = { workspace = true }

# Crypto and utilities for tests
ml-dsa = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }