[package]
name = "zoe-client-storage"
version = "0.1.0"
edition = "2024"
description = "Client-side storage layer for Zoe using SQLite and encryption support"
license = "MIT OR Apache-2.0"

[features]
default = ["sqlite"]
sqlite = ["rusqlite", "refinery"]
mock = ["mockall"]

[dependencies]
zoe-wire-protocol = { path = "../wire-protocol", features = ["rusqlite"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database and migrations
rusqlite = { workspace = true, features = ["bundled", "sqlcipher", "blob"], optional = true }
refinery = { version = "0.8", features = ["rusqlite"], optional = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
hex = { workspace = true }
libcrux-ml-dsa = { workspace = true }

# mock testing support
mockall = { workspace = true, optional = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
serial_test = { workspace = true }

# Mock testing support
mockall = { workspace = true }

# Crypto and utilities for tests
rand = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }