[package]
name = "zoe-client-storage"
version = "0.1.0"
edition = "2024"
description = "Client-side storage layer for Zoe using SQLite and encryption support"
license = "MIT OR Apache-2.0"

[features]
default = ["sqlite"]
sqlite = ["rusqlite", "refinery"]
mock = ["mockall"]

[dependencies]
zoe-wire-protocol = { path = "../wire-protocol", features = ["rusqlite"] }
zoe-state-machine = { path = "../state-machine" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database and migrations
rusqlite = { workspace = true, features = ["blob"], optional = true }
refinery = { version = "0.8", features = ["rusqlite"], optional = true }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
hex = { workspace = true }
libcrux-ml-dsa = { workspace = true }

# mock testing support
mockall = { workspace = true, optional = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
serial_test = { workspace = true }

# Mock testing support
mockall = { workspace = true }

# Crypto and utilities for tests
rand = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }

# Force bundled SQLite cipher for mobile targets to avoid linking issues
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl", "blob"] }

[target.'cfg(target_os = "ios")'.dependencies]
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl", "blob"] }

# Platform-specific SQLite cipher configuration to fix macOS linking issues
[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl", "blob"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "macos")))'.dependencies]
rusqlite = { workspace = true, features = ["sqlcipher", "blob"], optional = true }


# [target.'cfg(target_os = "windows")'.dependencies]
# rusqlite = { workspace = true, features = ["bundled-sqlcipher", "blob"] }
