[package]
name = "zoe-client"
version = "0.1.0"
edition = "2024"

[features]
mls = ["dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_basic_credential", "dep:openmls_memory_storage", "dep:postcard"]

[dependencies]
# Wire protocol for crypto utilities
zoe-wire-protocol = { path = "../wire-protocol" }

# Storage dependencies
zoe-encrypted-storage = { path = "../encrypted-storage" }
zoe-blob-store = { path = "../blob-store" }
zoe-app-primitives = { path = "../app-primitives" }

# Async runtime
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }

# Logging
tracing = { workspace = true }

# QUIC and TLS support
quinn = { workspace = true }
rustls = { workspace = true }

# Cryptographic dependencies
ed25519-dalek = { workspace = true }

# Additional utilities
hex = { workspace = true }
async-trait = { workspace = true }

# MLS dependencies for encrypted messaging
openmls = { version = "0.7", optional = true }
openmls_rust_crypto = { version = "0.4", optional = true }
openmls_basic_credential = { version = "0.4", optional = true }
openmls_memory_storage = { version = "0.4", optional = true }

serde = { workspace = true }
tls_codec = { version = "0.4", optional = true }
postcard = { workspace = true, optional = true }

# Error types for documentation examples
thiserror = { workspace = true }

# RPC and futures for relay service traits
tarpc = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "echo_message_client"
path = "examples/echo_message_client.rs"

[[example]]
name = "blob_client"
path = "examples/blob_client.rs"

[[example]]
name = "mls_chat_client"
path = "examples/mls_chat_client.rs"
required-features = ["mls"]

[[example]]
name = "encrypted_personal_data"
path = "examples/encrypted_personal_data.rs"

[[example]]
name = "file_storage_example"
path = "examples/file_storage_example.rs"


[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

clap = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
bip39 = "2.1"