[package]
name = "forward-compatible-enum"
version = "0.1.0"
edition = "2024"
authors = ["Acter Contributors"]
description = "A derive macro for creating forward-compatible enums with postcard serialization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acter/zoe-relay"
keywords = ["serde", "postcard", "enum", "compatibility", "versioning"]
categories = ["encoding", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
postcard = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
# Enable additional debugging for macro expansion
debug = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]