[package]
name = "zoeyr-message-store"
version = "0.1.0"
edition = "2021"
description = "Zoeyr message storage and handling with Redis backend and tarpc service interface"
license = "MIT OR Apache-2.0"

[dependencies]
zoeyr-wire-protocol = { path = "../wire-protocol" }

# Async runtime
tokio = { workspace = true }

# Redis client
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }

# Protocol handling with Tarpc
tarpc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Additional utilities
hex = "0.4"
async-trait = "0.1"

# Async stream support
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
test-case = "3.0"
tempfile = "3.0"
serial_test = "3.0"

# Test containers for integration tests
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["redis"] }

# Crypto and utilities for tests
ed25519-dalek = "2.1"
rand = "0.8"
blake3 = { workspace = true } 