[package]
name = "zoe-message-store"
version = "0.1.0"
edition = "2021"
description = "Zoe message storage and handling with Redis backend and tarpc service interface"
license = "MIT OR Apache-2.0"

[dependencies]
zoe-wire-protocol = { path = "../wire-protocol" }

# Async runtime
tokio = { workspace = true }

# Redis client
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager", "r2d2"] }
r2d2 = "0.8"

# Serialization
serde = { workspace = true }
postcard = { workspace = true }

# Protocol handling with Tarpc
tarpc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Additional utilities
hex = { workspace = true }
async-trait = { workspace = true }

# Async stream support
async-stream = "0.3"
futures-util = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
test-case = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

# Test containers for integration tests
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["redis"] }

# Crypto and utilities for tests
ed25519-dalek = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true } 
env_logger = "0.11"