[package]
name = "zoeyr-relay-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relay-service-test"
path = "src/main.rs"

[dependencies]
zoeyr-wire-protocol = { path = "../wire-protocol" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Redis client
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protocol handling with Tarpc
tarpc = { version = "0.36", features = ["tokio1", "serde-transport", "tcp"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Configuration
config = "0.15"

# Testing
mockall = "0.13"

# Additional utilities
hex = "0.4"
async-trait = "0.1"
rand = "0.8"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Tarpc JSON support
tokio-serde = { version = "0.9", features = ["json"] }

postcard = { version = "1.0", features = ["use-std"] }
async-stream = "0.3.6"
futures-util = "0.3.31"

# Cryptographic dependencies
ed25519-dalek = "2.0"
blake3 = "1.0"

[dev-dependencies]
# Redis mock for testing
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["redis"] }

# Additional testing utilities
tokio-test = "0.4"
