[package]
name = "zoe-relay"
version = "0.1.0"
edition = "2021"
description = "Zoe relay server providing QUIC transport with ed25519 authentication"
license = "MIT OR Apache-2.0"

[dependencies]
# Wire protocol for crypto utilities
zoe-wire-protocol = { path = "../wire-protocol" }

# Async runtime
tokio = { workspace = true, features = ["io-util"] }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = "0.1"

# QUIC and TLS support
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Cryptographic dependencies
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Additional utilities
hex = "0.4"
async-trait = "0.1"

# Error types for documentation examples
thiserror = { workspace = true }

# RPC and futures for relay service traits
tarpc = { workspace = true }
futures-util = "0.3"
futures = "0.3"
postcard = { workspace = true }
serde = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# specific impls
zoe-blob-store = { path = "../blob-store" }
zoe-message-store = { path = "../message-store" }

# Pin projection for async streams
pin-project = "1.1"

# CLI dependencies
clap = { version = "4.4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rand = "0.8"

[[bin]]
name = "zoe-relay"
path = "src/main.rs"

[[example]]
name = "echo_message_client"
path = "examples/echo_message_client.rs"


[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

# Random number generation for tests
rand = "0.8"

# Additional utilities for testing
futures = "0.3"
tracing-subscriber = "0.3"
tempfile = "3.8"

# Error types for testing (already in dependencies above)
