[package]
name = "zoe-relay"
version = "0.1.0"
edition = "2021"
description = "Zoe relay server providing QUIC transport with ed25519 authentication"
license = "MIT OR Apache-2.0"

[dependencies]
# Wire protocol for crypto utilities
zoe-wire-protocol = { path = "../wire-protocol" }
zoe-message-store = { path = "../message-store" }
zoe-blob-store = { path = "../blob-store" }

# Async runtime
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true, features = ['serde-transport'] }
toml = "0.9.4"
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# QUIC and TLS support
quinn = { workspace = true }
rustls = { workspace = true }

# Cryptographic dependencies
ed25519-dalek = { workspace = true }

# Additional utilities
hex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

# Additional utilities for testing  
tempfile = { workspace = true }
