[package]
name = "zoe-relay"
version = "0.1.0"
edition = "2021"
description = "Zoe relay server providing QUIC transport with ML-DSA-44-based authentication"
license = "MIT OR Apache-2.0"

[[bin]]
name = "zoe-relay"
path = "src/main.rs"


[features]
default = []
tls-ml-dsa-44 = ["zoe-wire-protocol/tls-ml-dsa-44"]  # Enable ML-DSA-44 transport security

[dependencies]
# Wire protocol for crypto utilities
zoe-wire-protocol = { path = "../wire-protocol", features = ["server"] }
zoe-message-store = { path = "../message-store" }
zoe-blob-store = { path = "../blob-store" }

# Async runtime
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true, features = ['serde-transport'] }
toml = "0.9.4"
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# QUIC and TLS support
quinn = { workspace = true }
rustls = { workspace = true, features = ["prefer-post-quantum"] }

# Cryptographic dependencies
ml-dsa = { workspace = true }
ed25519-dalek = { workspace = true }
signature = { workspace = true }
postcard = { workspace = true }
pkcs8 = { workspace = true }

# Additional utilities
hex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

# Client for e2e tests
zoe-client = { path = "../client" }
zoe-e2e-tests = { path = "../../test/end2end" }

# Additional utilities for testing  
tempfile = { workspace = true }
redis = { version = "0.32.4", features = ["tokio-comp", "connection-manager"] }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
ed25519-dalek = { workspace = true }

# Certificate generation for tests
rcgen = "0.13"
